postgres-example/pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pg-namespace
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      # nodePort: 30080
  type: ClusterIP
