postgres-example/pgadmin/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: pg-namespace
spec:
  tls:
    - hosts:
        - k8s-cluster
      secretName: tls-secret
  rules:
    - host: k8s-cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
